[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.1"
failure = "0.1.8"
futures = "0.3.30"
http = "1.0.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
url = "2.5.0"

[dependencies.l1-models]
path = "../models"
